Container/Kubernetes/k3s-soniiit/Teleport-Cluster/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-teleport-cluster-https-redirect
  namespace: teleport-cluster
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-teleport-cluster-security
  namespace: teleport-cluster
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-teleport-cluster-websecure
  namespace: teleport-cluster
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`teleport.soniiit.net`)
      services:
        - name: teleport-cluster
          port: 443
          serversTransport: traefik-teleport-cluster-transport
      middlewares:
        - name: traefik-teleport-cluster-security
  tls:
    secretName: soniiit-net-production-tls
    domains:
      - main: "teleport.soniiit.net"
        sans:
          - "*.teleport.soniiit.net"
